[CU-2hck4yj] fix overflow

--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -32,3 +32,7 @@ body,
 header {
   background: $secondary;
 }
+
+body {
+  overflow-x: hidden;
+}
